--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
 title: Albert Sanchez
-description: Full Code Alchemist, Webmaster
+description: Just another weird software developer.
